# SequenceGameApi

./: AGENTS.md  PRTEST.txt  SPEC.md  build.gradle  create-release-pr.bat  create-release-pr.sh  docker-compose.yml  settings.gradle
.github/workflows/: deploy-staging.yml  deploy.yml
backend/: Dockerfile  build.gradle  settings.gradle
backend/src/main/resources/: application-dev.properties  application-prod.properties  application-staging.properties  application.properties  banner.txt
backend/src/test/resources/: application-test.properties
docker/: docker-compose-prod.yml  docker-compose-staging.yml
frontend/: .env.example  Dockerfile  README.md  api.py  docker-entrypoint.sh  index.html  main.py  package.json  pyproject.toml  vite.config.ts
frontend/open-api-definition-client/open_api_definition_client/models/: board_space_response.py  card.py  game_response.py  (+5 more)
frontend/src/: App.tsx  index.css  runtime-config.ts
frontend/src/api/: client.ts  schema.ts
frontend/src/components/: mode-toggle.tsx  theme-provider.tsx
frontend/src/lib/: uuid.ts
rl-learning/: main.py  openapi.json  pyproject.toml  rl_train.py
rl-learning/open-api-definition-client/: pyproject.toml
rl-learning/open-api-definition-client/open_api_definition_client/api/game/: do_player_action.py
rl-learning/open-api-definition-client/open_api_definition_client/models/: __init__.py  board_response.py  card_suit.py  game_created_response.py  game_player_hand_response.py  game_response_status.py
sequencegamerl/: build.gradle  settings.gradle
src/main/resources/: application.properties
(+134 files in other folders)
