[project]
name = "frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "open-api-definition-client",
    "gymnasium",
    "numpy",
    "stable-baselines3",
    "sb3-contrib",
    "tensorboard",
]

[tool.uv.sources]
open-api-definition-client = { path = "open-api-definition-client" }
